<resources>
    <string name="app_name">My Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="description">Notes</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="save">Add</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="update">Update</string>
    <string name="delete">Remove</string>
    <string name="search_reminder">Search Reminders</string>
    <string name="add_reminder_hint">You haven\'t add any reminders yet. \nAdd reminders using plus icon below</string>

    <string name="add_app_id">ca-app-pub-1433704113656055~7992609748</string>
    <string name="rss_banner_unit_id">ca-app-pub-1433704113656055/9819535807</string>
</resources>
